# ram-tracker

./: Dockerfile  asset-manifest.json  index.html  package-lock.json  package.json
public/: index.html
src/: App.tsx
src/app/: store.ts
src/componets/: dealer.tsx  equipment.tsx  progress.tsx  types.ts
src/data/: equipment_codes.json
src/services/: orderStatus.ts  types.ts
src/views/: Home.tsx  OrderStatus.tsx
static/js/: 787.b277de95.chunk.js  787.b277de95.chunk.js.map  main.250e0c1d.js  main.250e0c1d.js.map  main.4ab9c66f.js  main.4ab9c66f.js.map  main.74fb5dd9.js  main.74fb5dd9.js.map  main.9093d971.js  main.9093d971.js.map  main.b72175cb.js  main.b72175cb.js.map  main.bbcd775b.js  main.bbcd775b.js.map  main.e2bc9561.js  main.e2bc9561.js.map  main.e6fa8e1d.js  main.e6fa8e1d.js.map  main.fd4ccc2c.js  main.fd4ccc2c.js.map
utils/pdf-parser/: .venv  pdf_parser.py  pyproject.toml
